--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
   -ms-transition-timing-function: cubic-bezier(0.175, 0.885, 0.47, 1.515);
   -o-transition-timing-function: cubic-bezier(0.175, 0.885, 0.47, 1.515); }
 
+.hp-drag-sticker li {
+  box-shadow: 0 10px 7px -7px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 10px 7px -7px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.1); }
+
 .hp-drag-sticker {
   position: relative;
   margin: 40px auto 0;
@@ -37,10 +41,11 @@ body {
     width: 100%;
     height: 100%;
     padding: 30px;
-    box-shadow: 0 10px 7px -7px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.1);
     opacity: 0;
     cursor: pointer;
     background-color: #fff; }
+    .hp-drag-sticker li img {
+      width: 100%; }
 
 /* Page no js */
 .no-js .hp-drag-sticker li {
