--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,10 @@ body {
 	-ms-transition-timing-function: cubic-bezier(0.175, 0.885, 0.470, 1.515);
 	-o-transition-timing-function: cubic-bezier(0.175, 0.885, 0.470, 1.515);
 }
+%box-shadow{
+    box-shadow: 0 10px 7px -7px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 10px 7px -7px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.1);
+}
 
 .hp-drag-sticker {
     position: relative;
@@ -39,15 +43,18 @@ body {
         width: 100%;
         height: 100%;
         padding: 30px;
-        box-shadow: 0 10px 7px -7px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.1);
+        @extend %box-shadow;
         opacity: 0;
         cursor: pointer;
         background-color: #fff;
         &.animate {
-        	@extend %transition;  
+        	@extend %transition;
         }
         &.move-back {
             @extend %timing-function;
+        }
+        img{
+            width: 100%;
         }
     }
 }
